<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Os_AndroIno_Car</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_EstConex">Estado Coneccion</string>
    <string name="txt_puntoGPS">Mi punto</string>
    <string name="btnAdelante">Adelante</string>
    <string name="btnAtras">Atras</string>
    <string name="btnIzquierda">Izquierda</string>
    <string name="btnDerecha">Derecha</string>
    <string name="menVoz">C. Voz</string>
    <string name="menAcel">C. Acelerometro</string>
    <string name="menBotones">C. Botones</string>
    <string name="menConectar">Conectar BT</string>
    <string name="menDesconectar">Desconectar BT</string>
    <string name="menUsuario">Gestion de Datos</string>
    <string name="menSalir">SALIR</string>
    <string name="title_activity_conecxion_bluetooth">ConecxionBluetooth</string>
    <string name="EstadoBT">Estado Bluetooth</string>
    <string name="Recividos">Datos Recividos</string>
    <string name="Envie">Enviado</string>
    <string name="voice">Speak!</string>
    <string name="toggle_turn_off">Activado</string>
    <string name="toggle_turn_on">Desactivado</string>
    <string name="alerta">camino libre!</string>
    <string name="alerta1">camino cerrado adelante!</string>
    <string name="alerta2">camino cerrado atras!</string>
    <string name="txtImagen">Haga click en la imagen para tomar la fotografia</string>
    <string name="txtNombreUsuario">Nombre de usuario</string>
    <string name="txtPassword">Contrasena</string>
    <string name="btnGuardarUsuario">Guardar usuario</string>
    <string name="imgDescripcion">Imagen de usuario</string>
    <string name="btnAgregarUsuario">Agregar usuario</string>
    <string name="gestionar_datos">Gestionar Datos</string>
    <string name="crear">Crear Usuario</string>
    <string name="modificar">Modificar Usuario</string>
    <string name="eliminar">Eliminar Usuario</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="confirmar_contrasena">Confirmar Contraseña</string>
    <string name="guardar_usuario">Guardar Usuario</string>
    <string name="tomar_fotografia">Capturar Foto de Perfil</string>
    <string name="nueva_contrasena">Nueva Contraseña</string>
    <string name="modificar_usuario">Modificar Usuario</string>
    <string name="confirmar_nueva">Confirmar Nueva Contraseña</string>
    <string name="title_activity_modificar_usuario">Modificar Usuario</string>
    <string name="title_activity_crear_usuario">Crear Usuario</string>
    <string name="title_activity_gestion_usuario">Gestion de Usuarios</string>
    <string name="title_activity_distanciagps">Gestion de Restricciones GPS</string>
    <string name="otroComando">¿otro comando?</string>
    <string name="isStop">se ha detenido</string>
    <string name="noValido">Comando no identificado</string>
    <string name="busquedaDisposi">BUSQUEDA DE DISPOSITIVOS \n EN PROCESO</string>
    <string name="vozNoDispo">Reconocimiento de voz no disponible</string>
    <string name="lengNoSoportado">Lenguaje no soportado</string>
    <string name="errAudio">Error de audio</string>
    <string name="errClient">Error de cliente</string>
    <string name="errRed">Error de red</string>
    <string name="noResul">No hay resultados</string>
    <string name="errServidor">Error de servidor</string>
    <string name="dispSinBT">Dispositivo sin Bluetooth</string>
    <string name="encBT">Encienda el BlueTooth</string>
    <string name="noSePuede">No se puede</string>
    <string name="usuariopswdCorrectamente">Ingrese correctamente usuario y contrasena</string>
    <string name="contraIncorrecta">Contrasena incorrecta</string>
    <string name="camposMenos8">Campos de contrasena con menos de 8 caracteres</string>
    <string name="contraNueva">Contrasenas nuevas no coinciden</string>
    <string name="contraNuevaNoComp">Contrasena nueva no comprobada</string>
    <string name="seValidaContraSinColo">Se valida una nueva contrasena sin colocarla</string>
    <string name="modificaExitossa">Modificacion exitosa</string>
    <string name="selecUsuario">Seleccionar usuario</string>
    <string name="noUsuarioReg">No usuario registrado</string>
    <string name="usuarioEliminado">Usuario eliminado</string>
    <string name="obtenerGPS">Obteniendo posicion GPS....\n Por favor espere mientras se muestra su posicion actual</string>
    <string name="noLeidoGPS">No se ha leido un punto GPS</string>
    <string name="modificarLugar">Seleccione lugar a modificar</string>
    <string name="noDatos">No se encontraron datos</string>
    <string name="eliminarLugar">Seleccionar lugar a eliminar</string>
    <string name="sidoEliminado"> ha sido eliminado</string>
    <string name="habiliGPSManual">Por favor habilitar GPS de forma manual</string>
    <string name="usuarioValido">Ingrese un nombre de usuario valido</string>
    <string name="sinNombreusuario">No ha ingresado un nombre para el usuario</string>
    <string name="usuarioNoValido">Usuario no valido</string>
    <string name="fotoPerfil">Foto de perfil no ha sido tomada</string>
    <string name="usuarioExitoso">Usuario ingresado con exito</string>
    <string name="usuarioNoIngresadoSistema">Usuario No ingresado al sistema</string>
    <string name="usuarioExistente">Usuario ya existe</string>
    <string name="exito">Exito</string>
    <string name="falloInsertar">Fallo al insertar</string>
    <string name="btnIniSes">Iniciar sesion</string>
    <string name="btnUsuarioNuevo">Usuario nuevo</string>
    <string name="restringirPos">Restringir posicion</string>
    <string name="modifiPos">Modificar Posicion</string>
    <string name="eliminarPos">Eliminar posicion</string>
    <string name="posAct">Punto Actual:\n</string>
    <string name="latitud">Latitud: </string>
    <string name="longitud">\nLongitud: </string>
    <string name="solicitarGPS">Favor Habiliar el GPS de forma manual</string>
    <string name="gestUsu">Gestionar Usuarios</string>
    <string name="gestRest">Gestionar Lugares</string>
    <string name="crearL">Restringir Posicion</string>
    <string name="modiL">Modificar Posicion</string>
    <string name="eliL">Eliminar Posicion</string>
    <string name="nombreP">Nombre para Posicion</string>
    <string name="distanciaP">Distancia Radial (Metros)</string>

    <string-array name="tablas">
        <item>a</item>
        <item>b</item>
    </string-array>

</resources>