<!--?xml version="1.0" encoding="utf-8"?-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ModificarUsuario"
    android:id="@+id/sc" >
    
    <LinearLayout android:id="@+id/mlinear1" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
<LinearLayout
    android:id="@+id/mlinear2"
    android:layout_width="match_parent"
    android:layout_height="234dp"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/mimgView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:src="@drawable/icono1" />
</LinearLayout>
    <EditText android:id="@+id/medt1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/nombre_usuario"
        android:inputType="textPersonName"
        />
    <EditText android:id="@+id/medt2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/contrasena"
        android:inputType="textPassword"/>
    <EditText android:id="@+id/medt3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/nueva_contrasena"
        android:inputType="textPassword"/>
    <EditText android:id="@+id/medt4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/confirmar_nueva"
        android:inputType="textPassword"/>
    <RelativeLayout android:id="@+id/mrelative1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        
        <Button android:id="@+id/mbtn2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/modificar_usuario"
        android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"/>

        <Button
            android:id="@+id/mbtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/tomar_fotografia" />
        
    </RelativeLayout>
    
</LinearLayout>
</ScrollView>