<!--?xml version="1.0" encoding="utf-8"?-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grisClaro"
    android:orientation="vertical"
    tools:context=".IniciarSesion" >
    
    <LinearLayout android:id="@+id/linear1" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical" >
    
        
	<LinearLayout
	    android:id="@+id/linear3"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_marginBottom="10dp"
	    android:orientation="vertical" >
    
	    <ImageView
	        android:id="@+id/imgView"
	        android:layout_width="wrap_content"
	        android:layout_height="176dp"
	        android:src="@drawable/icono1" />

	</LinearLayout>
 <TextView
	        android:id="@+id/edt1"
	        android:layout_width="match_parent"
	        android:layout_height="fill_parent"
	        android:background="@color/blanco"
	        android:text="@string/txtNombreUsuario"
	        android:layout_marginBottom="10dp"
	        android:textSize="32sp"/>
    <EditText
        android:id="@+id/edt2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/blanco"
        android:hint="@string/txtPassword"
        android:inputType="textPassword" />

    <RelativeLayout
        android:id="@+id/rela1"
	    android:layout_width="fill_parent"
	    android:layout_marginTop="10dp"
	    android:layout_height="wrap_content" >
	    
	    <Button
	        android:id="@+id/btnIniciarSesion"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/estilo_btn"
	        android:text="@string/btnIniSes" />

	    <Button
	        android:id="@+id/btnUsuarioNuevo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_gravity="center_horizontal"
	        android:background="@drawable/estilo_btn"
	        android:text="@string/btnUsuarioNuevo" />

    </RelativeLayout>
</LinearLayout>
</ScrollView>